# sistemas-operativos-2

./: README.md
2023---laboratorio-i-camilacareggio/: CMakeLists.txt  Informe.md  script.sh
2023---laboratorio-i-camilacareggio/src/: client_fifo.c  client_message_queue.c  client_shared_memory.c  server.c
2023---soii---laboratorio-6-camilacareggio/: comands.txt  nginx_config.md  ssh_commands.md
2023---soii---laboratorio-6-camilacareggio/sensors/: build_run.sh  go.mod  sensor_server.go
2023---soii---laboratorio-6-camilacareggio/users/: build_run.sh  go.mod  user_server.go
2023---soii---laboratorio-ii-camilacareggio/: CMakeLists.txt  client_maker  client_maker.c  infrome.md  makefile  script.sh
2023---soii---laboratorio-ii-camilacareggio/headers/: handlers.h  server.h  socket_settings.h
2023---soii---laboratorio-ii-camilacareggio/src/: clientA.c  clientB.c  clientC.c
2023---soii---laboratorio-ii-camilacareggio/src/server/: handlers.c  server.c  socket_settings.c
2023---soii---laboratorio-iii-camilacareggio/: CMakeLists.txt  README.md  informe.md  laboratorio3original.c
2023---soii---laboratorio-iii-camilacareggio/headers/: functions.h
2023---soii---laboratorio-iii-camilacareggio/mejoras/: mejora-completo.c  mejora-valgrind.c  mejora-yo.c
2023---soii---laboratorio-iii-camilacareggio/test/: functions.c  test.c
2023---soii---laboratorio-iv-camilacareggio/: main
2023---soii---rtos-camilacareggio/: FreeRTOSConfig.h  README.md  main.c
2023---soii---rtos-camilacareggio/init/: startup.c
soii-2023-laboratorio-v-camilacareggio/: CMakeLists.txt  api_server.c  client.c  informe.md  script.sh
